text alignment correction in products page corrected

--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1013,6 +1013,7 @@ h5.mb-0.mb0diff {
   font-weight: 600;
   color: #0971b7;
   font-size: 33px;
+  text-align: center;
 }
 
 .blog-info p {
